infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Assuming NGINX
spec:
  rules:
    - host: ec2-54-76-116-218.eu-west-1.compute.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-kubernetes-service
                port:
                  number: 80
